# xchat-rt

./: Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.in  extra  new file  new files
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debian-patches/: changelog  control
debian-patches/patches/: 76_fix_gfvs_mime_handler.patch  series
intl/: dcigettext.c  eval-plural.h
plugins/: Makefile.in
plugins/perl/: Makefile.in
plugins/python/: Makefile.in
plugins/scripts/: 8ball.pl  Boss.pl  FunFacts.pl  TimeLeft.pl  Tourettes.pl  away.pl  fish.py  fml.pl  geoip.py  greetonchan-002.pl  highlightaway.py  inxi.py  ircopscan.py  libnotify-1.4.pl  match005-1.pl  randslappy-0-5.pl  randversion.py  showallchannels-001.pl  simple_display.pl  ss-autoaway.py  textenhance.py  tinyurl.py  xquiz.py
plugins/scripts/25016-1002173-xchat-auto-op-pour-xchat-en-python/: auto-op.py  readme.txt
plugins/scripts/PyIC-master/: example.py
plugins/scripts/Uberscript/: UberScript.cfg  UberScript.pl
plugins/scripts/Uberscript/uber/: session.cfg
plugins/scripts/away/: away.conf  hideaway.conf  xchatAway2.pl
plugins/scripts/away/stubloader/: readme  stubloader.conf  stubloader.pl
plugins/scripts/away/xqf-xchat/: index.html  xqf-xchat.pl
plugins/scripts/cancelbot-code-55/weatherbot/: WEATHERBOT.CHANGELOG  weatherbot.py
plugins/scripts/cwirc-2.0.0/: Changelog  LISEZMOI  Makefile  README  RELEASE_NOTES  cwdecoder.c  cwdecoder.h  cwframe.c  cwframe.h  cwirc.h  cwsound.c  cwsound.h  extension.c  extension.h  frontend.c  grid.c  grid.h  gui.c  gui.h  iambickey.xpm  io.c  io.h  ipc.c  ipc.h  keyer.c  keyer.h  mksndinclude.c  morsecodes.h  plugin.c  propagation.c  propagation.h  rcfile.c  rcfile.h  sidetone.xpm  smeter.xpm  straightkey.xpm  types.h
plugins/scripts/cwirc-2.0.0/debian/: changelog  control  copyright  rules  watch
plugins/scripts/cwirc-2.0.0/rpm/: cwirc.spec  rpmmacros
plugins/scripts/cwirc-2.0.0/xchat/: README.xchat_include_file
plugins/scripts/dictbot-3.0.0/: dictbot.py
plugins/scripts/dns/: dns.def  makefile  plugin-dns.c  plugin-dns.d  thread.c  xchat-plugin.h
plugins/scripts/encryption/: bitcoin-otc-gpg-eauth.xchat.py  bitlbee-libotr4.patch  gnupg.py  irc-crypt-1.6.pl
plugins/scripts/encryption/FiSH-XChat.v0.98-source-notworking/: DH1080.c  DH1080.h  FiSH-xchat.txt  FiSH-xchat_History.txt  FiSH.c  FiSH.h  Makefile  SHA-256.c  base64.c  blowfish.c  blowfish.h  cfgopts.h  mir_amd64  mir_macosx  miracl.h  mirdef.h  xchat-password.rc
plugins/scripts/encryption/libotr2-bzr/: ChangeLog  (+4 more)
plugins/scripts/encryption/otrproxy-0.3.1/: AUTHORS  AgEditor  AgEditor.cbp  AgEditor.depend  AgEditor.layout  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  WxSogi.layout  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  otrproxy.1
plugins/scripts/encryption/otrproxy-0.3.1/autom4te.cache/: output.0  requests  traces.0
plugins/scripts/encryption/otrproxy-0.3.1/packaging/debian/: changelog  control  copyright  rules  watch
plugins/scripts/encryption/otrproxy-0.3.1/packaging/fedora/: otrproxy.spec
plugins/scripts/encryption/otrproxy-0.3.1/packaging/osx/: README  build-package  otrproxy.pmsp
plugins/scripts/encryption/otrproxy-0.3.1/packaging/windows/: otrproxy.nsi
plugins/scripts/encryption/otrproxy-0.3.1/src/: Makefile  Makefile.am  Makefile.in  accountlist.c  accountlist.h  buffer.c  buffer.h  charset.c  charset.h  flappacket.c  flappacket.h  httposcar.c  httposcar.h  httpproxy.c  httpproxy.h  netstate.c  netstate.h  netutil.c  netutil.h  oscarproxy.c  oscarproxy.h  otrproxy.c  otrproxy.h  proxyevent.c  proxyevent.h  servsock.c  servsock.h  sockdef.h  socksproxy.c  socksproxy.h  uisync.c  uisync.h  util.c  util.h
plugins/scripts/encryption/otrproxy-0.3.1/src/.deps/: buffer.Po  flappacket.Po
plugins/scripts/encryption/otrproxy-0.3.1/wxui/: Makefile  Makefile.am  Makefile.in  wxmainframe.cpp  wxmainframe.h  wxotrdialog.cpp  wxotrdialog.h  wxotrpolicy.cpp  wxotrpolicy.h  wxotrpolicybox.cpp  wxotrpolicybox.h  wxotrproxy.cpp  wxotrproxy.h  wxprefframe.cpp  wxprefframe.h  wxproxyevent.cpp  wxproxyevent.h  wxstatwrtext.cpp  wxstatwrtext.h
plugins/scripts/geoipTools/: Geo-ip.pl  geoiplookup.py  web-GEOIP-XCHAT.py
plugins/scripts/junk/: irssigooglefight.pl  raw.tcl  test.pl
plugins/scripts/off/: dns.pl  exaile.py  qigen  seenbot.py  uplinkgreet0.25.py  xchat-speak.py  xchat_logviewer-1.1.pl
plugins/scripts/off/test/xchat-guile-0.1/: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  bootstrap.sh  configure  configure.ac  example.scm  guile.c  plugin-system.scm
plugins/scripts/off/test/xchat-guile-0.1/m4/: Makefile.in
plugins/scripts/off/test/xchat-guile-0.3/: Makefile  Makefile.am  NEWS  README  config.status  configure  configure.ac  example.scm  guile.c  guile.la  guile_la-guile.lo  libtool  plugin-system.scm
plugins/scripts/off/test/xchat-guile-0.3/.deps/: guile_la-guile.Plo
plugins/scripts/off/test/xchat-guile-0.3/.libs/: guile.la  guile.lai
plugins/scripts/off/test/xchat-guile-0.3/m4/: Makefile  Makefile.am
plugins/scripts/settings/: masturbate.txt  seenbot.db  seenbot.py~
plugins/scripts/theme/: pevents.conf
plugins/scripts/voting/: votescript.txt  vs2  vs3  vsd  vss
plugins/scripts/wizard/: README  ctcpreply.conf  palette.conf  wizard.pl
plugins/scripts/xchat-dbus/: Unsaved Document 1  xchat dbus  xchat dbus commands
plugins/tcl/: Makefile.in
po/: be.gmo  be.po  ca.gmo  ca.po  cs.gmo  cs.po  de.gmo  de.po  el.gmo  el.po  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  gl.gmo  gl.po  hu.gmo  hu.po  it.gmo  it.po  ja.gmo  ja.po  kn.gmo  kn.po  ko.gmo  ko.po  lt.gmo  lt.po  mk.gmo  mk.po  nl.gmo  nl.po  pa.gmo  pa.po  pl.gmo  pl.po  pt.gmo  pt.po  (+19 more)
src/: Makefile.in
src/common/: Makefile.in  cfgfiles.c  dcc.c  proto-irc.c  server.c  ssl.c  text.c  text.h  xchat.c  xchat.h
src/common/dbus/: Makefile.in  org.xchat.service.service
src/fe-gtk/: Makefile.in  maingui.c  setup.c  userlistgui.c
src/fe-text/: Makefile.in
src/pixmaps/: Makefile.in
(+355 files in other folders)
