INCLUDES = @LIBOTR_CFLAGS@ @LIBGCRYPT_CFLAGS@

noinst_LIBRARIES = libotrproxy.a

libotrproxy_a_SOURCES = buffer.c flappacket.c httposcar.c httpproxy.c \
    netstate.c netutil.c oscarproxy.c otrproxy.c proxyevent.c \
    servsock.c socksproxy.c uisync.c util.c accountlist.c charset.c

noinst_HEADERS = buffer.h flappacket.h httposcar.h httpproxy.h netstate.h \
    netutil.h oscarproxy.h otrproxy.h proxyevent.h servsock.h sockdef.h \
    socksproxy.h uisync.h util.h accountlist.h charset.h
